--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,8 +1,6 @@
-
 <a href="/">Home</a>
 <a href="/about/">About</a>
 <a href = "/blog"> Blog </a>
-
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
@@ -12,6 +10,6 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>My astrosite</h1>
+		<h1>This is my blog</h1>
 	</body>
 </html>
