--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,3 +1,11 @@
+---
+import '../styles/global.css'
+const pageTitle = "My astro learning blog";
+---
+
+
+
+
 <a href="/">Home</a>
 <a href="/about/">About</a>
 <a href = "/blog"> Blog </a>
@@ -7,10 +15,15 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<h1>My Astro Learning Blog</h1>
+		<h1>{pageTitle}</h1>
         <p>This is where I will post about my journey learning Astro.</p>
+        <ul>
+            <li><a href="/post/post-1">Post 1</a></li>
+            <li><a href="/post/post-2">Post 2</a></li>
+            <li><a href="/post/post-3">Post 3</a></li>
+        </ul>
 	</body>
 </html>
