--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,7 @@
-
+---
+import '../styles/global.css'
+const pageTitle = "Home page" ;
+---
 <a href="/">Home</a>
 <a href="/about/">About</a>
 <a href = "/blog"> Blog </a>
@@ -9,9 +12,9 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<h1>My astrosite</h1>
+		<h1>{pageTitle}</h1>
 	</body>
 </html>
