--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,8 @@
 ---
-
+import Navigation from '../components/Navigation.astro';
 import '../styles/global.css'
+import Footer from '../components/Footer.astro';
+
 const pageTitle = "About Me";
 
 const identity = {
@@ -21,11 +23,8 @@ const fontWeight = "bold" ;
 const textCase = "uppercase" ;
 ---
 
-<a href="/">Home</a>
-<a href="/about/">About</a>
-<a href = "/blog"> Blog </a>
-
 <html lang="en">
+    <Navigation/>
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -69,6 +68,6 @@ const textCase = "uppercase" ;
         {finished && <p>I finished this tutorial!</p>}  
 
         {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
-        
+        <Footer/>
 	</body>
 </html>
