--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,11 @@
 ---
 import '../styles/global.css'
+import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 const pageTitle = "Home page" ;
 ---
-<a href="/">Home</a>
-<a href="/about/">About</a>
-<a href = "/blog"> Blog </a>
-
 <html lang="en">
+	<Navigation/>
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -16,5 +15,6 @@ const pageTitle = "Home page" ;
 	</head>
 	<body>
 		<h1>{pageTitle}</h1>
+		<Footer></Footer>
 	</body>
 </html>
