--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,12 +1,11 @@
 ---
 import '../styles/global.css'
 const pageTitle = "My astro learning blog";
-import Navigation from '../components/Navigation.astro';
 import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
 ---
 
 <html lang="en">
-    <Navigation/>
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -15,6 +14,7 @@ import Footer from '../components/Footer.astro';
 		<title>{pageTitle}</title>
 	</head>
 	<body>
+        <Header></Header>
 		<h1>{pageTitle}</h1>
         <p>This is where I will post about my journey learning Astro.</p>
         <ul>
