--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,7 @@
 ---
-import Navigation from '../components/Navigation.astro';
 import '../styles/global.css'
 import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
 
 const pageTitle = "About Me";
 
@@ -24,7 +24,6 @@ const textCase = "uppercase" ;
 ---
 
 <html lang="en">
-    <Navigation/>
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -44,6 +43,7 @@ const textCase = "uppercase" ;
         </style>
 	</head>
 	<body>
+        <Header></Header>
         <!-- <h1>Astro</h1> -->
         <h1>{pageTitle}</h1>
         <h2>... and my new Astro site!</h2>
