--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,10 @@
 ---
     import Navigation from "./Navigation.astro";
+    import Hamburger from "./Hamburger.astro";
 ---
 <header>
     <nav>
+        <Hamburger></Hamburger>
         <Navigation></Navigation>
     </nav>
 </header>
