--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -24,4 +24,7 @@ import Header from '../components/Header.astro';
         </ul>
 	</body>
     <Footer></Footer>
+	<script>
+		import "../scripts/menu"
+	</script>
 </html>
