--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,9 +20,7 @@ const pageTitle = "Home page" ;
 		<Footer></Footer>
 		
 		<script>
-		  document.querySelector('.hamburger').addEventListener('click', () => {
-			document.querySelector('.nav-links').classList.toggle('expanded');
-		  });
+		  import "../scripts/menu"
 		</script>
 	  
 	</body>
